# dajapy

./: README.md  pyproject.toml
dajapy/: __init__.py
tests/: test_dajapy.py
